More details on home page

--- a/tmpl/home.html.tmpl
+++ b/tmpl/home.html.tmpl
@@ -52,11 +52,12 @@
   <details>
     <summary>Privacy Friendly</summary>
     <p>Sheep Count tracks unique visits without using cookies or persistently storing any personal data.</p>
+    <p>Sheep Count identifies unique users by hashing their user agent and IP address with a random salt that is rotated on a regular basis.</p>
   </details>
 
   <details>
     <summary>Own Your Data</summary>
-    <p>Data is stored in the ubiquitous SQLite format.</p>
+    <p>Your website's data is stored by you and you alone. Data is stored in the ubiquitous SQLite format and, if you want more than Sheep Count's statistics, can easily be analysed using a programming language of your choice.</p>
   </details>
 
   <details>
